remove Boolean constructor usages
Signed-off-by: NicolaIsotta <nicola.isotta@gmail.com>