@@ -121,7 +121,7 @@ implements IFSRandomAccessFileImpl
                                    new Object[] { data,
                                                   new Integer (dataOffset),
                                                   new Integer (length),
-                                                  new Boolean (readFully) },
+                                                  Boolean.valueOf(readFully) },
                                    ARGS_TO_RETURN, readFully );
       // Note: The 6th arg says whether to call the method asynchronously.
       // In the case of readFully, we want asynchronous, since the read
@@ -190,7 +190,7 @@ implements IFSRandomAccessFileImpl
     try {
       connection_.callMethod (pxId_, "setForceToStorage",
                               new Class[] { Boolean.TYPE },
-                              new Object[] { new Boolean(forceToStorage) });
+                              new Object[] { Boolean.valueOf(forceToStorage) });
     }
     catch (InvocationTargetException e) {
       throw ProxyClientConnection.rethrow (e);
